// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<InlineEditInput /> InlineEditInput - default 1`] = `
<span
  className="inline-edit-input-edit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-pen fa-fw icon-addon-left"
    data-icon="pen"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M362.7 19.32C387.7-5.678 428.3-5.678 453.3 19.32L492.7 58.75C517.7 83.74 517.7 124.3 492.7 149.3L444.3 197.7L314.3 67.72L362.7 19.32zM421.7 220.3L188.5 453.4C178.1 463.8 165.2 471.5 151.1 475.6L30.77 511C22.35 513.5 13.24 511.2 7.03 504.1C.8198 498.8-1.502 489.7 .976 481.2L36.37 360.9C40.53 346.8 48.16 333.9 58.57 323.5L291.7 90.34L421.7 220.3z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`<InlineEditInput /> InlineEditInput - disabled save button when text is not valid 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Click to edit"
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      Click to edit
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-xmark "
      data-icon="xmark"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;

exports[`<InlineEditInput /> InlineEditInput - edit mode 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Click to edit"
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      Click to edit
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-check "
      data-icon="check"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 448 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M438.6 105.4C451.1 117.9 451.1 138.1 438.6 150.6L182.6 406.6C170.1 419.1 149.9 419.1 137.4 406.6L9.372 278.6C-3.124 266.1-3.124 245.9 9.372 233.4C21.87 220.9 42.13 220.9 54.63 233.4L159.1 338.7L393.4 105.4C405.9 92.88 426.1 92.88 438.6 105.4H438.6z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={false}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-xmark "
      data-icon="xmark"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;

exports[`<InlineEditInput /> InlineEditInput - read mode 1`] = `
<span
  className="inline-edit-input-edit"
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <span
    className="text-muted"
  >
    Click to edit
  </span>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-pen fa-fw icon-addon-left"
    data-icon="pen"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 512 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M362.7 19.32C387.7-5.678 428.3-5.678 453.3 19.32L492.7 58.75C517.7 83.74 517.7 124.3 492.7 149.3L444.3 197.7L314.3 67.72L362.7 19.32zM421.7 220.3L188.5 453.4C178.1 463.8 165.2 471.5 151.1 475.6L30.77 511C22.35 513.5 13.24 511.2 7.03 504.1C.8198 498.8-1.502 489.7 .976 481.2L36.37 360.9C40.53 346.8 48.16 333.9 58.57 323.5L291.7 90.34L421.7 220.3z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
</span>
`;

exports[`<InlineEditInput /> InlineEditInput - saving in edit mode 1`] = `
<form
  className="inline-edit-input form-inline"
  onSubmit={[Function]}
>
  <div
    style={
      Object {
        "display": "inline-block",
      }
    }
  >
    <input
      className="form-control inline-edit-input-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Click to edit"
      style={
        Object {
          "boxSizing": "content-box",
          "width": "1px",
        }
      }
    />
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      
    </div>
    <div
      style={
        Object {
          "height": 0,
          "left": 0,
          "overflow": "scroll",
          "position": "absolute",
          "top": 0,
          "visibility": "hidden",
          "whiteSpace": "pre",
        }
      }
    >
      Click to edit
    </div>
  </div>
  <button
    className="btn btn-primary"
    disabled={true}
    onClick={[Function]}
    type="submit"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-spinner fa-spin fa-fw "
      data-icon="spinner"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M304 48C304 74.51 282.5 96 256 96C229.5 96 208 74.51 208 48C208 21.49 229.5 0 256 0C282.5 0 304 21.49 304 48zM304 464C304 490.5 282.5 512 256 512C229.5 512 208 490.5 208 464C208 437.5 229.5 416 256 416C282.5 416 304 437.5 304 464zM0 256C0 229.5 21.49 208 48 208C74.51 208 96 229.5 96 256C96 282.5 74.51 304 48 304C21.49 304 0 282.5 0 256zM512 256C512 282.5 490.5 304 464 304C437.5 304 416 282.5 416 256C416 229.5 437.5 208 464 208C490.5 208 512 229.5 512 256zM74.98 437C56.23 418.3 56.23 387.9 74.98 369.1C93.73 350.4 124.1 350.4 142.9 369.1C161.6 387.9 161.6 418.3 142.9 437C124.1 455.8 93.73 455.8 74.98 437V437zM142.9 142.9C124.1 161.6 93.73 161.6 74.98 142.9C56.24 124.1 56.24 93.73 74.98 74.98C93.73 56.23 124.1 56.23 142.9 74.98C161.6 93.73 161.6 124.1 142.9 142.9zM369.1 369.1C387.9 350.4 418.3 350.4 437 369.1C455.8 387.9 455.8 418.3 437 437C418.3 455.8 387.9 455.8 369.1 437C350.4 418.3 350.4 387.9 369.1 369.1V369.1z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
  <button
    className="btn btn-default"
    disabled={true}
    onClick={[Function]}
    type="reset"
  >
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-xmark "
      data-icon="xmark"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 320 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M310.6 361.4c12.5 12.5 12.5 32.75 0 45.25C304.4 412.9 296.2 416 288 416s-16.38-3.125-22.62-9.375L160 301.3L54.63 406.6C48.38 412.9 40.19 416 32 416S15.63 412.9 9.375 406.6c-12.5-12.5-12.5-32.75 0-45.25l105.4-105.4L9.375 150.6c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 210.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0s12.5 32.75 0 45.25l-105.4 105.4L310.6 361.4z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
  </button>
</form>
`;
